tests/NormalTests/paczka1/fuzzy1/49066316.err
Error in line 2: A802 A556 63,7
Error in line 24: icduT5 S805 11,2
Error in line 38: icduT5 A802 4,4
